fix: header layout on mobile

--- a/src/components/navigation/HeaderNavigation.less
+++ b/src/components/navigation/HeaderNavigation.less
@@ -2,7 +2,7 @@
   @apply flex justify-between h-full;
 
   .title {
-    @apply grow shrink text-right sm:text-center text-xl sm:text-2xl text-white m-0 truncate;
+    @apply shrink text-xl sm:text-2xl text-white m-0 truncate;
   }
 
   .logo {
